# tech-spend-command-center

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: ai-input.json  cloud-input.json  resilience-input.json  saas-input.json  sample-report.md  watchdog-input.json
tech_spend_command_center/: cli.py
tech_spend_command_center/parsers/: __init__.py  inputs.py
tech_spend_command_center/report/: __init__.py  builder.py  renderers.py
tests/: test_report.py
