[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tech-spend-command-center"
version = "0.1.0"
description = "Unified Cloud + AI + SaaS executive spend summary CLI across the FinOps pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Diana Molski", email = "polush@gmail.com" }]
keywords = ["finops", "cloud", "ai", "saas", "cost", "focus", "cli", "executive-summary"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.7",
]

[project.scripts]
techspend = "tech_spend_command_center.cli:main"

[project.urls]
Homepage = "https://github.com/dianuhs/tech-spend-command-center"
Repository = "https://github.com/dianuhs/tech-spend-command-center.git"
"Bug Tracker" = "https://github.com/dianuhs/tech-spend-command-center/issues"

[tool.hatch.version]
path = "tech_spend_command_center/__init__.py"
